# Orrery

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  start.sh  swarm.md
backend/: AGENTS.md  Dockerfile  README.md  accounting.py  config.py  keeper.py  main.py  middleware.py  models.py  pyproject.toml  space.py  store.py  tour.py
backend/agents/: AGENTS.md  README.md  curator.py  librarian.py  master.py  oracle.py  status.py
backend/auth/: __init__.py  db.py  deps.py  models.py  ratelimit.py  router.py  security.py  service.py
backend/clustering/: AGENTS.md  README.md  hierarchical.py  namer.py
backend/services/: AGENTS.md  README.md  chunking.py  embedder_registry.py  embeddings.py  filesystem.py  llm.py  logging_setup.py  metadata_extraction.py  objectstore.py  ocr.py  reembed_job.py  retrieval_defaults.py  similarity.py  sse.py  streaming.py  summarize.py  tree.py  vectorstore.py
backend/tests/: conftest.py  test_auth_api.py  test_auth_unit.py  test_config.py  test_embedder_registry.py  test_hierarchical.py  test_keeper_api.py  test_migrate_to_multiuser.py  test_namer.py  test_objectstore.py  test_paper_store_concurrency.py  test_papers_api.py  test_reconcile_storage.py  test_reembed_job.py  test_s3_objectstore.py  test_scoped_objectstore.py  test_space.py  test_summarize.py  test_tour_api.py  test_tree.py
backend/tests/fixtures/: tree_snapshot_expected.json  tree_snapshot_records.json
backend/tools/: migrate_to_multiuser.py  reconcile_storage.py
frontend/: .env.example  AGENTS.md  (+8 more)
(+71 files in other folders)
