[project]
name = "project-library-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "openai>=1.35.0",
    "mistralai>=1.0.0",
    "httpx>=0.27.0",
    "chromadb>=0.5.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "pypdf>=4.0.0",
    "aiofiles>=23.2.1",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "argon2-cffi>=23.1.0",
    "sqlmodel>=0.0.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.uv]
package = false
